# Real-Time-Edge-Detection-Viewer

./: .gitignore  Readme.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/realtime/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: app.ts  index.html  package-lock.json  package.json  tsconfig.json
web/src/: app.ts
